# PyMenus

./: .gitignore  README.md  pyproject.toml
examples/: 1_Simple.py  2_Options.py  3_Dynamic.py  4_Structural.py
examples/argument_parser/: 1_simple.py
examples/cursor/: 1_move.py  2_save_cursor.py
examples/forms/: 1_form.py
examples/menus/: 4_Structural.py
pymenus/: __init__.py  base.py  cursor.py  menu.py  structual_menu.py
pymenus/forms/: question.py  validation.py
ultra_cli/: __init__.py  cursor.py  option.py  structual_menu.py  ultra_cli.py
ultra_cli/argument_parser/: __init__.py  complex_handlers.py  parser.py  utils.py
ultra_cli/forms/: __init__.py  form.py  question.py  validation.py
ultra_cli/menus/: __init__.py  base.py  menu.py  option.py  structual_menu.py
ultra_cli/styles/: __init__.py  attributes.py  colors.py  out.py
ultra_cli/utils/: __init__.py
